{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 25,
  "lineage": "ec6aece8-0d19-8120-e181-d7aead04434f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alpha_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685246175129:internet-gateway/igw-0078fce5e13e7f764",
            "id": "igw-0078fce5e13e7f764",
            "owner_id": "685246175129",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0d23e06fd7604820d"
          },
          "dependencies": [
            "aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0078fce5e13e7f764",
            "id": "r-rtb-082564e19afa940c41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-082564e19afa940c4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.alpha_internet_gateway",
            "aws_route_table.alpha_public_rt",
            "aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alpha_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685246175129:route-table/rtb-082564e19afa940c4",
            "id": "rtb-082564e19afa940c4",
            "owner_id": "685246175129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0078fce5e13e7f764",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d23e06fd7604820d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alpha_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eeaefebfed1c173b",
            "route_table_id": "rtb-082564e19afa940c4",
            "subnet_id": "subnet-096a7d5f439530368"
          },
          "dependencies": [
            "aws_route_table.alpha_public_rt",
            "aws_subnet.alpha_subnet",
            "aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alpha_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685246175129:security-group/sg-02c0101a0a61b6520",
            "description": "dev security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c0101a0a61b6520",
            "ingress": [
              {
                "cidr_blocks": [
                  "89.115.20.168/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev_sg",
            "name_prefix": "",
            "owner_id": "685246175129",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d23e06fd7604820d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alpha_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685246175129:subnet/subnet-096a7d5f439530368",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096a7d5f439530368",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "685246175129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "vpc_id": "vpc-0d23e06fd7604820d"
          },
          "dependencies": [
            "aws_vpc.alpha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alpha_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685246175129:vpc/vpc-0d23e06fd7604820d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-06e57654801df51ec",
            "default_route_table_id": "rtb-0c7034a509bcf8fdd",
            "default_security_group_id": "sg-0c7d1c19ef66dc566",
            "dhcp_options_id": "dopt-02c2fba19a93291aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d23e06fd7604820d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c7034a509bcf8fdd",
            "owner_id": "685246175129",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}